Fixed icon and alignment

--- a/src/track/track.css
+++ b/src/track/track.css
@@ -56,7 +56,7 @@ main.gridlayout {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1em;
-  align-items: top;
+  align-items: start;
   justify-content: center;
   grid-auto-flow: row;
 }
